test/functions/iterators/bradc/captureEmpty.good
captureEmpty.chpl:5: error: array element type cannot be 'nothing'
